DBDT31448 修改临床检索树问题