@@ -22,6 +22,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * 临床检索视图信息服务
@@ -78,7 +79,7 @@ class ShiTuXXServiceImpl implements ShiTuXXService {
         for(LinChuangJSSTDtoTree linChuangJSSTDtoTree :linChuangJSSTDtoTrees.stream()
                 .filter(s->s.getFuLeiID().equals(fuLeiID))
                 .sorted(Comparator.comparing(LinChuangJSSTDtoTree::getShunXuHao))
-                .toList())
+                .collect(Collectors.toList()))
         {
             linChuangJSSTDtoTree.setChildren(
                     BeanUtil.copyListProperties(
